--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+#spring.security.user.name= user
+#spring.security.user.password= 1234
+#spring.security.user.roles= USER
+
 
